API spec updated
